refactor search controllers
