# HR-forge-api/src/main/java/com/vhark/hrforgeapi/department/DepartmentController.java
@@ -27,6 +27,7 @@ public class DepartmentController {
       summary = "Find all departments",
       description = "Endpoint for retrieving a paginated list of all departments.",
       parameters = {
+        @Parameter(name = "name", description = "Part of the department name", example = "Finance"),
         @Parameter(name = "page", description = "Page number", example = "0"),
         @Parameter(name = "size", description = "Page size", example = "10"),
         @Parameter(
@@ -43,13 +44,14 @@ public class DepartmentController {
       operationId = "getAllDepartments")
   @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
   public ResponseEntity<PageResponse<DepartmentResponse>> findAll(
+      @RequestParam(name = "name") String name,
       @RequestParam(name = "page", defaultValue = "0") int page,
       @RequestParam(name = "size", defaultValue = "10") int size,
       @RequestParam(name = "sortField", defaultValue = "name") String sortField,
       @RequestParam(name = "sortDirection", defaultValue = "ASC") String sortDirection) {
     Sort.Direction direction =
         sortDirection.equalsIgnoreCase("DESC") ? Sort.Direction.DESC : Sort.Direction.ASC;
-    return ResponseEntity.ok(departmentService.findAll(page, size, sortField, direction));
+    return ResponseEntity.ok(departmentService.findAll(name, page, size, sortField, direction));
   }
 
   @Operation(
@@ -69,38 +71,6 @@ public class DepartmentController {
     } else {
       return ResponseEntity.ok(departmentService.findByName(idOrName));
     }
-  }
-
-  @Operation(
-      summary = "Search departments by name",
-      description = "Endpoint for searching departments by a part of their name.",
-      parameters = {
-        @Parameter(name = "name", description = "Part of the department name", example = "Finance"),
-        @Parameter(name = "page", description = "Page number", example = "0"),
-        @Parameter(name = "size", description = "Page size", example = "10"),
-        @Parameter(
-            name = "sortField",
-            description = "Field to sort by",
-            example = "name",
-            schema = @Schema(implementation = String.class)),
-        @Parameter(
-            name = "sortDirection",
-            description = "Sort direction (ASC or DESC)",
-            example = "ASC",
-            schema = @Schema(implementation = String.class))
-      },
-      operationId = "searchDepartmentsByName")
-  @GetMapping(value = "/search", produces = MediaType.APPLICATION_JSON_VALUE)
-  public ResponseEntity<PageResponse<DepartmentResponse>> searchByName(
-      @RequestParam(name = "name") String name,
-      @RequestParam(name = "page", defaultValue = "0") int page,
-      @RequestParam(name = "size", defaultValue = "10") int size,
-      @RequestParam(name = "sortField", defaultValue = "name") String sortField,
-      @RequestParam(name = "sortDirection", defaultValue = "ASC") String sortDirection) {
-    Sort.Direction direction =
-        sortDirection.equalsIgnoreCase("DESC") ? Sort.Direction.DESC : Sort.Direction.ASC;
-    return ResponseEntity.ok(
-        departmentService.searchByName(name, page, size, sortField, direction));
   }
 
   @Operation(
