# HR-forge-api/src/main/java/com/vhark/hrforgeapi/position/PositionController.java
@@ -27,6 +27,7 @@ public class PositionController {
       summary = "Find all positions",
       description = "Endpoint for retrieving a paginated list of all positions.",
       parameters = {
+        @Parameter(name = "name", description = "Part of the position name", example = "Engineer"),
         @Parameter(name = "page", description = "Page number", example = "0"),
         @Parameter(name = "size", description = "Page size", example = "10"),
         @Parameter(
@@ -43,13 +44,14 @@ public class PositionController {
       operationId = "getAllPositions")
   @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
   public ResponseEntity<PageResponse<PositionResponse>> findAll(
+      @RequestParam(name = "name") String name,
       @RequestParam(name = "page", defaultValue = "0") int page,
       @RequestParam(name = "size", defaultValue = "10") int size,
       @RequestParam(name = "sortField", defaultValue = "name") String sortField,
       @RequestParam(name = "sortDirection", defaultValue = "ASC") String sortDirection) {
     Sort.Direction direction =
         sortDirection.equalsIgnoreCase("DESC") ? Sort.Direction.DESC : Sort.Direction.ASC;
-    return ResponseEntity.ok(positionService.findAll(page, size, sortField, direction));
+    return ResponseEntity.ok(positionService.findAll(name, page, size, sortField, direction));
   }
 
   @Operation(
@@ -69,37 +71,6 @@ public class PositionController {
     } else {
       return ResponseEntity.ok(positionService.findByName(idOrName));
     }
-  }
-
-  @Operation(
-      summary = "Search positions by name",
-      description = "Endpoint for searching positions by a part of their name.",
-      parameters = {
-        @Parameter(name = "name", description = "Part of the position name", example = "Engineer"),
-        @Parameter(name = "page", description = "Page number", example = "0"),
-        @Parameter(name = "size", description = "Page size", example = "10"),
-        @Parameter(
-            name = "sortField",
-            description = "Field to sort by",
-            example = "name",
-            schema = @Schema(implementation = String.class)),
-        @Parameter(
-            name = "sortDirection",
-            description = "Sort direction (ASC or DESC)",
-            example = "ASC",
-            schema = @Schema(implementation = String.class))
-      },
-      operationId = "searchPositionsByName")
-  @GetMapping(value = "/search", produces = MediaType.APPLICATION_JSON_VALUE)
-  public ResponseEntity<PageResponse<PositionResponse>> searchByName(
-      @RequestParam(name = "name") String name,
-      @RequestParam(name = "page", defaultValue = "0") int page,
-      @RequestParam(name = "size", defaultValue = "10") int size,
-      @RequestParam(name = "sortField", defaultValue = "name") String sortField,
-      @RequestParam(name = "sortDirection", defaultValue = "ASC") String sortDirection) {
-    Sort.Direction direction =
-        sortDirection.equalsIgnoreCase("DESC") ? Sort.Direction.DESC : Sort.Direction.ASC;
-    return ResponseEntity.ok(positionService.searchByName(name, page, size, sortField, direction));
   }
 
   @Operation(
